<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Bienvenido"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="start|center_vertical"/>
        <ImageButton
            android:id="@+id/btnConfigurar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/configuraciones"
            android:background="@color/black"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical|end"
            />

    </LinearLayout>

    <!-- Opción "Mes en Curso" -->
    <ImageButton
        android:id="@+id/btnmescurso"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Mes_en_curso"
        android:layout_gravity="center"
        android:src="@drawable/mescurso" />

    <TextView
        android:id="@+id/tvMesCurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mes_en_curso"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Opción "Crear Nuevo Mes" -->
    <ImageButton
        android:id="@+id/btnmesnuevo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Mes_nuevo"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:src="@drawable/nuevomes" />

    <TextView
        android:id="@+id/tvMesNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mes_nuevo"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Opción "Meses Anteriores" -->
    <ImageButton
        android:id="@+id/btnmesesantiguos"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Meses_anterioes"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:src="@drawable/mesesantiguos" />

    <TextView
        android:id="@+id/tvMesesAntiguos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Meses_anterioes"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Cerrar sesion -->
    <Button
        android:id="@+id/btncerrarsesion"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/Cerrar_sesion" />
</LinearLayout>
