<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="16dp">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ggastos"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/txtmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:inputType="textEmailAddress" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintEnabled="true"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="15dp"
            android:background="@color/white"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:backgroundTint="#FF8A80"
        android:text="@string/iniciar_sesion"
        android:padding="15dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/registrarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarme"
        android:layout_marginTop="20dp"
        android:textColor="#EA80FC"
        android:layout_gravity="center"
        android:padding="10dp" />

    <TextView
        android:id="@+id/recuperarPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_contraseña"
        android:layout_marginTop="10dp"
        android:textColor="#FF9E80"
        android:layout_gravity="center"
        android:padding="10dp" />

</LinearLayout>
